force-app/main/default/objects/OM_QueueSettingsSCV__mdt/OM_QueueSettingsSCV__mdt.object-meta.xml
<CustomObject>
    <label>Configuración de colas (SCV)</label>
    <pluralLabel>Configuraciones de cola</pluralLabel>
</CustomObject>