force-app/main/default/objects/OM_QueueSettingsSCV__mdt/fields/OM_CallbackQueue__c.field-meta.xml
<CustomField>
    <fullName>OM_CallbackQueue__c</fullName>
    <description>Cola en la que deriva el proceso donde enruta a la cola principal,en el caso de realizarse un callback.</description>
    <label>Cola Callback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>