force-app/main/default/objects/OM_QueueSettingsSCV__mdt/fields/OM_CustomerQueue__c.field-meta.xml
<CustomField>
    <fullName>OM_CustomerQueue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Queue</label>
    <type>Checkbox</type>
</CustomField>