force-app/main/default/objects/OM_QueueSettingsSCV__mdt/fields/OM_DefaultQueue__c.field-meta.xml
<CustomField>
    <fullName>OM_DefaultQueue__c</fullName>
    <label>Default Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>