force-app/main/default/objects/OM_QueueSettingsSCV__mdt/fields/OM_OutboundPhone__c.field-meta.xml
<CustomField>
    <fullName>OM_OutboundPhone__c</fullName>
    <label>Nº Oficina</label>
    <type>Phone</type>
</CustomField>