force-app/main/default/objects/OM_QueueSettingsSCV__mdt/fields/OM_OutboundPhoneCB__c.field-meta.xml
<CustomField>
    <fullName>OM_OutboundPhoneCB__c</fullName>
    <label>Nº Saliente Callback</label>
    <type>Phone</type>
</CustomField>