force-app/main/default/objects/OM_QueueSettingsSCV__mdt/fields/OM_Tipo__c.field-meta.xml
<CustomField>
    <fullName>OM_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
                <default>true</default>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Asesor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>